# cookiecutter_templates

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cli.py  cli.sh  coverage.json  dev-cli.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.txt
django-app/{{ cookiecutter.package_name }}/: .flake8  .gitignore  Makefile  README.md  manage.py  pyproject.toml
django-app/{{ cookiecutter.package_name }}/.github/workflows/: pythonapp.yml
django-app/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: __init__.py  apps.py
django-app/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}_tests/test_project/: publish.py  settings.py  urls.py
django-app/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}_tests/tests/: test_admin.py  test_project_setup.py
generated_templates/make-uv-python/your_cool_package/: Makefile  README.md  pyproject.toml
generated_templates/managed-django-project/your_cool_package/: README.md  manage.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.django32.txt  requirements.django42.txt  requirements.django50.txt  requirements.django51.txt  requirements.txt
generated_templates/managed-django-project/your_cool_package/your_cool_package/: __init__.py  apps.py  context_processors.py
generated_templates/managed-django-project/your_cool_package/your_cool_package_project/: __init__.py  __main__.py  urls.py
generated_templates/pipenv-python/your_cool_package/: Makefile  Pipfile  pyproject.toml
generated_templates/pipenv-python/your_cool_package/your_cool_package/: __main__.py
generated_templates/piptools-python/your_cool_package/: .pre-commit-config.yaml  README.md  cli.py  dev-cli.py  pyproject.toml  requirements.dev.txt  requirements.txt
generated_templates/piptools-python/your_cool_package/your_cool_package/: __init__.py  __main__.py  constants.py
generated_templates/poetry-django-app/your_reuseable_django_app/: .gitignore  Dockerfile.tests  Makefile  README.md  manage.py  pyproject.toml
generated_templates/poetry-python/your_cool_package/: Makefile  README.md  cli.sh  pyproject.toml
generated_templates/poetry-python/your_cool_package/your_cool_package/: __init__.py  (+2 more)
generated_templates/uv-python/your_cool_package/: README.md  cli.py  dev-cli.py  pyproject.toml
generated_templates/yunohost_django_package/django_example_ynh/: dev-cli.py  manifest.json  manifest.toml  pyproject.toml  requirements.dev.txt  tests.toml
make-uv-python/{{ cookiecutter.package_name }}/: Makefile  README.md  pyproject.toml
make-uv-python/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: __main__.py
managed-django-project/{{ cookiecutter.package_name }}/: .gitignore  .pre-commit-config.yaml  README.md  manage.py  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.django32.txt  requirements.django42.txt  requirements.django50.txt  requirements.django51.txt  requirements.txt
managed-django-project/{{ cookiecutter.package_name }}/{{ cookiecutter.django_project_name }}/: __init__.py
managed-django-project/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: __init__.py  apps.py  context_processors.py
managed-django-project/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}_project/: __init__.py  __main__.py
pipenv-python/{{ cookiecutter.package_name }}/: Makefile  Pipfile  README.md  pyproject.toml
piptools-python/{{ cookiecutter.package_name }}/: README.md  cli.py  dev-cli.py  pyproject.toml  requirements.dev.txt  requirements.txt
piptools-python/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: __init__.py  __main__.py  constants.py
piptools-python/{{cookiecutter.package_name}}/: .gitignore  README.md  cli.py  pyproject.toml  requirements.dev.txt  requirements.txt
piptools-python/{{cookiecutter.package_name}}/requirements/: develop.in  develop.txt  production.in  production.txt
piptools-python/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __main__.py
poetry-django-app/{{ cookiecutter.package_name }}/: .flake8  .gitignore  Dockerfile.tests  Makefile  README.md  pyproject.toml
poetry-django-app/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: __init__.py  apps.py  models.py  urls.py  views.py
poetry-python/{{ cookiecutter.package_name }}/: Makefile  cli.sh  pyproject.toml
poetry-python/{{ cookiecutter.package_name }}/{{ cookiecutter.package_name }}/: cli.py
poetry-python/{{cookiecutter.package_name}}/: .gitignore  Makefile  pyproject.toml
poetry-python/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __main__.py  cli.py
yunohost_django_package/{{ cookiecutter.ynh_app_pkg_name }}/: dev-cli.py  local_settings_source.py  manifest.json  manifest.toml  pyproject.toml  requirements.dev.txt  tests.toml
yunohost_django_package/{{ cookiecutter.ynh_app_pkg_name }}/.run/: Template Python.run.xml  dev-cli test.run.xml
yunohost_django_package/{{ cookiecutter.ynh_app_pkg_name }}/conf/: install_python.py  local_settings.py  requirements.txt  settings.py  urls.py  {{ cookiecutter.project_name }}.service
yunohost_django_package/{{ cookiecutter.ynh_app_pkg_name }}/doc/: ADMIN.md  DESCRIPTION.md  DISCLAIMER.md
yunohost_django_package/{{ cookiecutter.ynh_app_pkg_name }}/scripts/: _common.sh
yunohost_django_package/{{ cookiecutter.ynh_app_pkg_name }}/tests/: test_django_project.py  test_example_project.py  test_example_project_urls_1.snapshot.html  test_project_setup.py
yunohost_django_package/{{ cookiecutter.ynh_app_pkg_name }}/{{ cookiecutter.ynh_app_pkg_name }}/: __init__.py  constants.py
yunohost_django_package/{{cookiecutter.ynh_app_pkg_name}}/: manifest.json  pyproject.toml
yunohost_django_package/{{cookiecutter.ynh_app_pkg_name}}/conf/: settings.py
yunohost_django_package/{{cookiecutter.ynh_app_pkg_name}}/doc/: DESCRIPTION.md  DISCLAIMER.md
yunohost_django_package/{{cookiecutter.ynh_app_pkg_name}}/tests/: test_django_project.py  test_example_project.py  test_example_project_urls_1.snapshot.html  test_project_setup.py
(+293 files in other folders)
