[project]
name = "managetemplates"
dynamic = ["version"]
description = "Pseudo Python package to test the https://github.com/jedie/cookiecutter_templates cookiecutter templates"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'cookiecutter_templates@jensdiemer.de'}
]
requires-python = ">=3.11"
dependencies = [
    "cli-base-utilities>=0.11.0",  # https://github.com/jedie/cli-base-utilities
    "manageprojects>=0.16.0",  # https://github.com/jedie/manageprojects
    "bx_py_utils",  # https://github.com/boxine/bx_py_utils
    "click",  # https://github.com/pallets/click/
    "rich-click",  # https://github.com/ewels/rich-click
    "rich",  # https://github.com/Textualize/rich
    "django_example",  # Only to get the current version of this package ;)
]
[dependency-groups]
dev = [
    "uv",  # https://github.com/astral-sh/uv
    "hatchling",  # https://github.com/pypa/hatch/tree/master/backend
    "build",  # https://github.com/pypa/build
    "tox",  # https://github.com/tox-dev/tox
    "tox-uv",  # https://github.com/tox-dev/tox-uv
    "coverage",  # https://github.com/nedbat/coveragepy
    "autopep8",  # https://github.com/hhatto/autopep8
    "pyupgrade",  # https://github.com/asottile/pyupgrade
    "flake8",  # https://github.com/pycqa/flake8
    "flake8-bugbear",  # https://github.com/PyCQA/flake8-bugbear
    "pyflakes",  # https://github.com/PyCQA/pyflakes
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "pre-commit",  # https://github.com/pre-commit/pre-commit
    "typeguard",  # https://github.com/agronholm/typeguard/

    # https://github.com/akaihola/darker
    # https://github.com/ikamensh/flynt
    # https://github.com/pycqa/isort
    # https://github.com/pygments/pygments
    "darker[flynt, isort, color]",

    # Work-a-round for: https://github.com/jazzband/pip-tools/issues/1866
    # see also: https://github.com/jazzband/pip-tools/issues/994#issuecomment-1321226661
    # backports.tarfile is needed for python <3.12
    'backports.tarfile', # via jaraco-context -> keyring -> twine
]

[project.urls]
Documentation = "https://github.com/jedie/cookiecutter_templates"
Source = "https://github.com/jedie/cookiecutter_templates"

[project.scripts]
managetemplates_app = "managetemplates.__main__:main"
managetemplates_dev = "managetemplates.cli_dev:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["managetemplates"]

[tool.hatch.version]
path = "managetemplates/__init__.py"


[tool.cli_base.pip_audit]
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[]


[tool.cli_base]
version_module_name = "managetemplates"  # Used by "update-readme-history" git hook


[tool.darker]
src = ['cli.py', 'managetemplates'] # Exclude all Cookiecutter Templates!
config = './pyproject.toml'
revision = "origin/main..."
line_length = 119
color = true
skip_string_normalization = true
diff = false
check = false
stdout = false
isort = true
lint = [
    "flake8",
]
log_level = "INFO"


[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/config_files/#pyprojecttoml-preferred-format
atomic=true
profile='black'
skip_glob=['.*', '*/htmlcov/*']
known_first_party=['managetemplates']
line_length=119
lines_after_imports=2


[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['managetemplates']
command_line = '-m unittest --verbose --locals --buffer'

[tool.coverage.report]
omit = ['.*', '*/tests/*']
skip_empty = true
fail_under = 30
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.tox]  # https://tox.wiki/en/latest/config.html#pyproject-toml
isolated_build = true
env_list = ["3.13", "3.12", "3.11"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
with_dev = true
commands = [
    ["python3", "-m", "coverage", "run", "--context", "'{envname}'"]
]


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "5b2334c"
initial_date = 2022-11-19T22:40:01+01:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "uv-python"
applied_migrations = [
    "68124d4", # 2022-11-20T00:19:44+01:00
    "7260de6", # 2023-02-19T12:16:21+01:00
    "41345e2", # 2023-08-05T20:53:10+02:00
    "51d1d77", # 2023-12-21T20:58:37+01:00
    "cb3b71e", # 2024-03-12T08:19:30+01:00
    "a968634", # 2024-09-25T22:03:22+02:00
    "8e360b3", # 2024-11-13T17:19:44+01:00
]

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "cookiecutter_templates@jensdiemer.de"
package_name = "managetemplates"
package_version = "0.0.1"
package_description = "Pseudo Python package to test the https://github.com/jedie/cookiecutter_templates cookiecutter templates"
package_url = "https://github.com/jedie/cookiecutter_templates"
issues_url = "https://github.com/jedie/cookiecutter_templates/issues"
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"
