[project]
name = "managetemplates"
dynamic = ["version"]
description = "Pseudo Python package to test the https://github.com/jedie/cookiecutter_templates cookiecutter templates"
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
authors = [
    {name = 'Jens Diemer', email = 'cookiecutter_templates@jensdiemer.de'}
]
requires-python = ">=3.11"
dependencies = [
    "manageprojects",  # https://github.com/jedie/manageprojects
    "cli-base-utilities",  # https://github.com/jedie/cli-base-utilities
    "bx_py_utils",  # https://github.com/boxine/bx_py_utils
    "tyro",  # https://github.com/brentyi/tyro
    "rich",  # https://github.com/Textualize/rich
    "django_example",  # Only to get the current version of this package ;)
]
[dependency-groups]
dev = [
    "manageprojects",  # https://github.com/jedie/manageprojects
    "urllib3", # for bx_py_utils.test_utils.deny_requests.deny_any_real_request() in tests
    "uv",  # https://github.com/astral-sh/uv
    "hatchling",  # https://github.com/pypa/hatch/tree/master/backend
    "nox",  # https://github.com/wntrblm/nox
    "coverage",  # https://github.com/nedbat/coveragepy
    "ruff", # https://github.com/astral-sh/ruff
    "codespell",  # https://github.com/codespell-project/codespell
    "EditorConfig",  # https://github.com/editorconfig/editorconfig-core-py
    "pip-audit",  # https://github.com/pypa/pip-audit
    "mypy",  # https://github.com/python/mypy
    "twine",  # https://github.com/pypa/twine
    "pre-commit",  # https://github.com/pre-commit/pre-commit
    "typeguard",  # https://github.com/agronholm/typeguard/
]

[project.urls]
Documentation = "https://github.com/jedie/cookiecutter_templates"
Source = "https://github.com/jedie/cookiecutter_templates"

[project.scripts]
managetemplates_app = "managetemplates.__main__:main"
managetemplates_dev = "managetemplates.cli_dev:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["managetemplates"]

[tool.hatch.version]
path = "managetemplates/__init__.py"


[tool.cli_base.pip_audit]
requirements=["requirements.dev.txt"]
strict=true
require_hashes=true
ignore-vuln=[]


[tool.cli_base]
version_module_name = "managetemplates"  # Used by "update-readme-history" git hook


[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
line-length = 120
exclude = [
  ".*/",
  "dist",
  "[{][{]*", # Exclude cookiecutter template directories like {{ cookiecutter.project_slug }}
]

[tool.ruff.lint]
preview = true  # Needed for some of the rules
extend-select = [
    "E", # pycodestyle: https://docs.astral.sh/ruff/rules/#error-e
    "I", # isort: https://docs.astral.sh/ruff/rules/#isort-i
]
ignore = [
    "E402", # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
]

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#lintisort
lines-after-imports = 2
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "single"


[tool.coverage.run]
branch = true
parallel = true
concurrency = ["multiprocessing"]
source = ['.']
command_line = '-m unittest --verbose --locals --buffer'

[tool.coverage.report]
omit = [
    '.*',
    '*/tests/*',
    '*/{{*/*', # Exclude cookiecutter template directories like {{ cookiecutter.project_slug }}
]
skip_empty = true
fail_under = 30
show_missing = true
exclude_lines = [
    'if self.debug:',
    'pragma: no cover',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
]


[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
allow_redefinition = true  # https://github.com/python/mypy/issues/7165
show_error_codes = true
plugins = []
exclude = ['.venv', 'tests']


[manageprojects] # https://github.com/jedie/manageprojects
initial_revision = "5b2334c"
initial_date = 2022-11-19T22:40:01+01:00
cookiecutter_template = "https://github.com/jedie/cookiecutter_templates/"
cookiecutter_directory = "uv-python"
applied_migrations = [
    "68124d4", # 2022-11-20T00:19:44+01:00
    "7260de6", # 2023-02-19T12:16:21+01:00
    "41345e2", # 2023-08-05T20:53:10+02:00
    "51d1d77", # 2023-12-21T20:58:37+01:00
    "cb3b71e", # 2024-03-12T08:19:30+01:00
    "a968634", # 2024-09-25T22:03:22+02:00
    "8e360b3", # 2024-11-13T17:19:44+01:00
    "e259304", # 2025-06-10T08:32:49+02:00
    "f909e9f", # 2025-09-03T14:13:21+02:00
]

[manageprojects.cookiecutter_context.cookiecutter]
full_name = "Jens Diemer"
github_username = "jedie"
author_email = "cookiecutter_templates@jensdiemer.de"
package_name = "managetemplates"
package_version = "0.0.1"
package_description = "Pseudo Python package to test the https://github.com/jedie/cookiecutter_templates cookiecutter templates"
package_url = "https://github.com/jedie/cookiecutter_templates"
issues_url = "https://github.com/jedie/cookiecutter_templates/issues"
license = "GPL-3.0-or-later"
_template = "https://github.com/jedie/cookiecutter_templates/"
